--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,35 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: linux/amd64
-            runner: ubuntu-24.04
-          - platform: linux/arm64
-            runner: ubuntu-24.04-arm
+          - platform: 'linux/amd64'
+            runner: 'ubuntu-24.04'
+            python-version: '3.10'
+          - platform: 'linux/arm64'
+            runner: 'ubuntu-24.04-arm'
+            python-version: '3.10'
 
     runs-on: ${{ matrix.runner }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        env:
+          PIP_DISABLE_PIP_VERSION_CHECK: 1
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Cache Python Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ runner.os }}-os:${{ matrix.runner }}-python:${{ matrix.python-version }}-${{ env.pythonLocation }}-${{ hashFiles('requirements.txt') }}
+
+      - name: Install Python Dependencies
+        shell: bash
+        run: pip3 install -r requirements.txt
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -42,6 +61,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare ENV
+        shell: bash
         run: |
           platform=${{ matrix.platform }}
           registry=${{ env.REGISTRY }}
@@ -66,7 +86,12 @@ jobs:
           push: false
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
 
+      - name: Verify Test Data
+        shell: bash
+        run: scripts/verify-test-data.py --image-name '${{ env.FULL_IMAGE_NAME }}'
+
       - name: Export Digest
+        shell: bash
         run: |
           mkdir -p ${{ runner.temp }}/digests
           digest="${{ steps.build.outputs.digest }}"
@@ -88,6 +113,7 @@ jobs:
 
     steps:
       - name: Prepare ENV
+        shell: bash
         run: |
           registry=${{ env.REGISTRY }}
           base_image_name=${{ env.BASE_IMAGE_NAME }}
@@ -122,11 +148,13 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
 
       - name: Create Unified Manifest and Push
+        shell: bash
         working-directory: ${{ runner.temp }}/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.FULL_IMAGE_NAME }}@sha256:%s ' *)
 
       - name: Inspect Image
+        shell: bash
         run: |
           docker buildx imagetools inspect ${{ env.FULL_IMAGE_NAME }}:${{ steps.meta.outputs.version }}
