--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,14 @@ permissions:
   attestations: write
   id-token: write
 
-# See: https://docs.docker.com/build/ci/github-actions/multi-platform/
 jobs:
-  build:
+  test:
     strategy:
       fail-fast: false
       matrix:
         include:
           - platform: 'linux/amd64'
             runner: 'ubuntu-24.04'
-            python-version: '3.10'
-          - platform: 'linux/arm64'
-            runner: 'ubuntu-24.04-arm'
             python-version: '3.10'
 
     runs-on: ${{ matrix.runner }}
@@ -75,6 +71,66 @@ jobs:
         with:
           images: ${{ env.FULL_IMAGE_NAME }}
 
+      - name: Build
+        id: build
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ env.FULL_IMAGE_NAME }}
+          push: false
+          outputs: |
+            type=docker
+
+      - name: Verify Test Data
+        shell: bash
+        run: scripts/verify-test-data.py --image-name ${{ steps.build.outputs.imageid }}
+
+  build:
+    needs: test
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: 'linux/amd64'
+            runner: 'ubuntu-24.04'
+            python-version: '3.10'
+          - platform: 'linux/arm64'
+            runner: 'ubuntu-24.04-arm'
+            python-version: '3.10'
+
+    runs-on: ${{ matrix.runner }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Prepare ENV
+        shell: bash
+        run: |
+          platform=${{ matrix.platform }}
+          registry=${{ env.REGISTRY }}
+          base_image_name=${{ env.BASE_IMAGE_NAME }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+          echo "FULL_IMAGE_NAME=${registry}/${base_image_name}" >> $GITHUB_ENV
+
+      - name: Extract Metadata for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.FULL_IMAGE_NAME }}
+
       - name: Build and Push to Digest
         id: build
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
@@ -86,11 +142,6 @@ jobs:
           push: false
           outputs: |
             type=image,push-by-digest=true,name-canonical=true,push=true
-            type=docker
-
-      - name: Verify Test Data
-        shell: bash
-        run: scripts/verify-test-data.py --image-name ${{ steps.build.outputs.imageid }}
 
       - name: Export Digest
         shell: bash
