--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Verify Test Data
         shell: bash
-        run: scripts/verify-test-data.py --image-name ${{ steps.build.outputs.imageid }}
+        run: scripts/verify-test-data.py --image-name ${{ steps.build.outputs.imageid }} || cat /tmp/edq-lms-server-output*
 
   build:
     needs: test
